include_directories(
  ${VLE_BINARY_DIR}/src
  ${VLE_SOURCE_DIR}/src
  ${MPI_INCLUDE_PATH}
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS})

link_directories(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXML_LIBRARY_DIRS}
  ${Boost_LIBRARY_DIRS})

IF (WIN32)
  ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/vle.o
    COMMAND ${CMAKE_RC_COMPILER}
    -I${CMAKE_BINARY_DIR}/share
    -i${CMAKE_BINARY_DIR}/share/vle.rc
    -o${CMAKE_CURRENT_BINARY_DIR}/vle.o)

  ADD_EXECUTABLE(vle main.cpp OptionGroup.cpp OptionGroup.hpp
    ${CMAKE_CURRENT_BINARY_DIR}/vle.o)

  IF (VLE_HAVE_MPI)
    ADD_EXECUTABLE(mvle mvle.cpp ${CMAKE_CURRENT_BINARY_DIR}/vle.o)
  ENDIF (VLE_HAVE_MPI)
ELSE (WIN32)
  ADD_EXECUTABLE(vle main.cpp OptionGroup.cpp OptionGroup.hpp)
  SET_TARGET_PROPERTIES(vle PROPERTIES SOVERSION "${VLE_MAJOR}.${VLE_MINOR}"
    VERSION "${VLE_MAJOR}.${VLE_MINOR}")

  IF (VLE_HAVE_MPI)
    ADD_EXECUTABLE(mvle mvle.cpp)
    SET_TARGET_PROPERTIES(vle PROPERTIES SOVERSION "${VLE_MAJOR}.${VLE_MINOR}"
      VERSION "${VLE_MAJOR}.${VLE_MINOR}")
  ENDIF (VLE_HAVE_MPI)
ENDIF (WIN32)

IF (VLE_HAVE_MPI)
  TARGET_LINK_LIBRARIES(mvle
    ${VLE_LIBRARIES}
    ${MPI_LIBRARY}
    ${MPI_EXTRA_LIBRARY}
    ${GLIBMM_LIBRARIES}
    ${LIBXML_LIBRARIES}
    ${GTHREAD_LIBRARIES}
    ${Boost_FILESYSTEM_LIBRARY}
    vlelib)
ENDIF (VLE_HAVE_MPI)

TARGET_LINK_LIBRARIES(vle
  ${VLE_LIBRARIES}
  ${GLIBMM_LIBRARIES}
  ${LIBXML_LIBRARIES}
  ${GTHREAD_LIBRARIES}
  ${Boost_FILESYSTEM_LIBRARY}
  vlelib)

INSTALL(TARGETS vle DESTINATION bin)
INSTALL(FILES vle.1 DESTINATION ${VLE_MANPAGE_PATH} RENAME
  vle-${VLE_VERSION_SHORT}.1)

IF (VLE_HAVE_MPI)
  INSTALL(TARGETS mvle DESTINATION bin)
  INSTALL(FILES mvle.1 DESTINATION ${VLE_MANPAGE_PATH} RENAME
    mvle-${VLE_VERSION_SHORT}.1)
ENDIF (VLE_HAVE_MPI)
